@@ -31,6 +31,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -47,8 +48,8 @@ import org.apache.solr.client.solrj.response.QueryResponse;
 import org.apache.solr.cloud.MiniSolrCloudCluster;
 import org.apache.solr.common.SolrInputDocument;
 import org.junit.After;
+import org.junit.AfterClass;
 import org.junit.BeforeClass;
-import org.junit.Ignore;
 import org.junit.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -66,8 +67,15 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
   public static void beforeClass() throws IOException {
     assumeFalse("FIXME: This test does not work with whitespace in CWD (https://issues.apache.org/jira/browse/SOLR-8877)",
         Paths.get(".").toAbsolutePath().toString().contains(" "));
+    // to be true
+    System.setProperty("solr.directoryFactory", "solr.NRTCachingDirectoryFactory");
   }
 
+  @AfterClass
+  public static void cleanupDirectoryFactory() throws IOException {
+    System.clearProperty("solr.directoryFactory");
+  }
+  
   /**
    * Overrides the call to exec bin/solr to start Solr nodes to start them using the Solr test-framework
    * instead of the script, since the script depends on a full build.
@@ -289,7 +297,6 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
     }
   }
 
-  @Ignore
   @Test
   public void testTechproductsExample() throws Exception {
     testExample("techproducts");
@@ -309,6 +316,7 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
     File solrExampleDir = tmpDir.toFile();
     File solrServerDir = solrHomeDir.getParentFile();
 
+    for (int i =0; i<2; i++){
     // need a port to start the example server on
     int bindPort = -1;
     try (ServerSocket socket = new ServerSocket(0)) {
@@ -333,7 +341,8 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
 
     SolrCLI.RunExampleTool tool = new SolrCLI.RunExampleTool(executor, System.in, stdoutSim);
     try {
-      tool.runTool(SolrCLI.processCommandLineArgs(SolrCLI.joinCommonAndToolOptions(tool.getOptions()), toolArgs));
+      final int status = tool.runTool(SolrCLI.processCommandLineArgs(SolrCLI.joinCommonAndToolOptions(tool.getOptions()), toolArgs));
+      assertEquals("it should be ok "+tool+" "+Arrays.toString(toolArgs),0, status);
     } catch (Exception e) {
       log.error("RunExampleTool failed due to: " + e +
           "; stdout from tool prior to failure: " + baos.toString(StandardCharsets.UTF_8.name()));
@@ -352,25 +361,31 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
 
     if ("techproducts".equals(exampleName)) {
       HttpSolrClient solrClient = getHttpSolrClient("http://localhost:" + bindPort + "/solr/" + exampleName);
-      SolrQuery query = new SolrQuery("*:*");
-      QueryResponse qr = solrClient.query(query);
-      long numFound = qr.getResults().getNumFound();
-      if (numFound == 0) {
-        // brief wait in case of timing issue in getting the new docs committed
-        log.warn("Going to wait for 1 second before re-trying query for techproduct example docs ...");
-        try {
-          Thread.sleep(1000);
-        } catch (InterruptedException ignore) {
-          Thread.interrupted();
+      try{
+        SolrQuery query = new SolrQuery("*:*");
+        QueryResponse qr = solrClient.query(query);
+        long numFound = qr.getResults().getNumFound();
+        if (numFound == 0) {
+          // brief wait in case of timing issue in getting the new docs committed
+          log.warn("Going to wait for 1 second before re-trying query for techproduct example docs ...");
+          try {
+            Thread.sleep(1000);
+          } catch (InterruptedException ignore) {
+            Thread.interrupted();
+          }
+          numFound = solrClient.query(query).getResults().getNumFound();
         }
-        numFound = solrClient.query(query).getResults().getNumFound();
+        assertTrue("expected 32 docs in the " + exampleName + " example but found " + numFound + ", output: " + toolOutput,
+            numFound == 32);
+      }finally{
+        
+        solrClient.close();
       }
-      assertTrue("expected 32 docs in the " + exampleName + " example but found " + numFound + ", output: " + toolOutput,
-          numFound == 32);
     }
 
     // stop the test instance
     executor.execute(org.apache.commons.exec.CommandLine.parse("bin/solr stop -p " + bindPort));
+    }
   }
 
   /**
